--- a/values.yaml
+++ b/values.yaml
@@ -19,7 +19,7 @@ cont_port: 8080
 # choice for the user. This also increases chances charts run on environments with little
 # resources, such as Minikube. If you do want to specify resources, uncomment the following
 # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-resources: {}
+resources: 
   limits:
     cpu: 100m
     memory: 128Mi
