--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "sample-java-app.fullname" . }}
+  name: {{ include "sample-java-app-helm-charts.fullname" . }}
   labels:
-    {{- include "sample-java-app.labels" . | nindent 4 }}
+    {{- include "sample-java-app-helm-charts.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "sample-java-app.selectorLabels" . | nindent 6 }}
+      {{- include "sample-java-app-helm-charts.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,7 +18,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "sample-java-app.selectorLabels" . | nindent 8 }}
+        {{- include "sample-java-app-helm-charts.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
