--- a/templates/service.yml
+++ b/templates/service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "sample-java-app.fullname" . }}
+  name: {{ include "sample-java-app-helm-charts.fullname" . }}
   labels:
-    {{- include "sample-java-app.labels" . | nindent 4 }}
+    {{- include "sample-java-app-helm-charts.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "sample-java-app.selectorLabels" . | nindent 4 }}
+    {{- include "sample-java-app-helm-charts.selectorLabels" . | nindent 4 }}
