--- a/templates/tests/test_sample_java_app.yaml
+++ b/templates/tests/test_sample_java_app.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "sample-java-app.fullname" . }}-test-connection"
+  name: "{{ include "sample-java-app-helm-charts.fullname" . }}-test-connection"
   labels:
-    {{- include "sample-java-app.labels" . | nindent 4 }}
+    {{- include "sample-java-app-helm-charts.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "sample-java-app.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "sample-java-app-helm-charts.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
