--- a/values.yaml
+++ b/values.yaml
@@ -7,7 +7,8 @@ labels:
 replicaCount: 2
 
 # Secret has to be create before youp pull the image
-imagePullSecrets: ramcloud_reg_cred
+imagePullSecrets: 
+  - name: ramcloud-reg-cred
 
 image:
   repository: ramcloud/sample-app
